Use expected CSSValue type for initial border-image-slice.

The apply code early returns if the type is not a
CSSBorderImageSliceValue. Create an initial value which matches the
expected type.

Bug: 918243
Change-Id: I3228d2410789306d915db892ad54e918631b8864
Reviewed-on: https://chromium-review.googlesource.com/c/1396118
Reviewed-by: Xida Chen <xidachen@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619951}
Former-commit-id: 9153af5e85eca2980b7522886a30368f630c2853