third_party/blink/renderer/core/css/properties/longhands/border_image_slice_custom.cc
@@ -29,9 +29,16 @@ const CSSValue* BorderImageSlice::CSSValueFromComputedStyleInternal(
 }
 
 const CSSValue* BorderImageSlice::InitialValue() const {
-  DEFINE_STATIC_LOCAL(Persistent<CSSValue>, value,
+  DEFINE_STATIC_LOCAL(Persistent<CSSValue>, hundredPercent,
                       (CSSPrimitiveValue::Create(
                           100, CSSPrimitiveValue::UnitType::kPercentage)));
+  DEFINE_STATIC_LOCAL(
+      Persistent<CSSQuadValue>, slices,
+      (CSSQuadValue::Create(hundredPercent, hundredPercent, hundredPercent,
+                            hundredPercent, CSSQuadValue::kSerializeAsQuad)));
+  DEFINE_STATIC_LOCAL(
+      Persistent<CSSBorderImageSliceValue>, value,
+      (CSSBorderImageSliceValue::Create(slices, /* fill */ false)));
   return value;
 }
 
